--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,21 @@
 
 
 <body>
-
 <div class="text-center">
 <img src="/static/assets/hop-on-motorcycle.gif" class="img-fluid" alt="dog on moto" />
 </div>
 
         <div class="container">
-        <h3>How it all began.</h3>
+        <br><h3>How it all began.</h3><br>
         <p>Although the first person to put a motor on a bicycle must have seemed crazy at the time, the motorcycle has found an enduring space in the public imagination. Spanning three centuries of development and fascination, its beginnings were almost too humble to predict the monster machines that crowd the motorways today.</p>
         <p>The very first, non-commercial vehicles that could be designated as motorcycles (almost) were mid-Victorian, and they of course used steam as their main source of propulsion. Like something out of a Jules Verne novel, inventors such as French bicycle manufacturer Ernest Michaux simply fitted a small steam engine to a 'velocipede' (basically any modern bicycle forerunner), and tooled around town burning their legs on hot steam and hotter dreams. Steam engines came in both the alcohol and coal-burning variety, and it's frankly a mystery how anyone managed to stay atop one.</p>
-        <p>It wasn't until the 1890s that what we know as the modern motorcycle was born. Coincidentally, this also heralded the invention of the first motorcycles available for public purchase. Gone were the steam-pumping of old; internal combustion now provided propulsion for the motorcycle. German engineers Hildebrand and Wolfmuller pipped American and British manufacturers - including the Excelsior Motor Company, Royal Enfield and Indian Motorcycle Manufacturing Company (US) - to the commercial post by introducing their eponymous internal combustion model in 1894, which was also the first model to be referred to as a 'motorcycle' (motorrad). But they only produced a couple thousand bikes in total and couldn't keep up with their larger counterparts.</p>
+        <p>It wasn't until the 1890s that what we know as the modern motorcycle was born. Coincidentally, this also heralded the invention of the first motorcycles available for public purchase. Gone were the steam-pumping of old; internal combustion now provided propulsion for the motorcycle. German engineers Hildebrand and Wolfmuller pipped American and British manufacturers - including the Excelsior Motor Company, Royal Enfield and Indian Motorcycle Manufacturing Company (US) - to the commercial post by introducing their eponymous internal combustion model in 1894, which was also the first model to be referred to as a 'motorcycle' (motorrad). But they only produced a couple thousand bikes in total and couldn't keep up with their larger counterparts.</p><br>
         <p>The First World War saw an increased interest in motorcycles for war communications, and at one point American manufacturer Harley-Davidson (founded 1903) had devoted 50 per cent of its output to the war effort. Messengers on motorcycles became a more familiar sight than those on horseback, and the British company Triumph, which had switched from bicycles to motorcycles in 1902, got in on the action with its 1915 Model H. Often considered the first 'modern' motorcycle, the Triumph Model H had no pedals and a reputation for reliability - essential in the midst of combat.</p>
         <p>Harley-Davidson became the largest manufacturer of motorcycles in the world after World War 1, thanks in part to its wartime profits. Manufacture from all nations ramped up as peacetime citizens became even more interested in the machine, and the better the technology got, the faster the bikes went. By the Second World War, production motorcycle speeds were reaching 100 miles per hour, such as the unbelievably expensive Brough Superior - manufactured in Nottingham, England - which was a favourite of T.E. Lawrence (or Lawrence of Arabia). Lawrence ultimately died of injuries from a crash while riding his beloved Brough.</p>
 
-        <div class="text-center">
+        <a><h3><div class="text-center" data-bs-toggle="tooltip" title="Don't try this at home kids!">
                 <img src="/static/assets/tenor1.gif" class="img-fluid" alt="biker" />
-                </div>
+                </div></h3></a>
 
         <p>Another world war saw motorbikes in combat, and later gave rise to a new culture where motorbikes were used for recreation and to project a certain lifestyle. Motorcycles were being designed to cater to an image as well as a function, and they got bigger, meaner, louder and faster than ever before. In 1949 the Vincent Black Shadow, produced by the British Vincent Motorcycles as a sports-orientated model, gained (and held onto for 24 years) the land speed motorbike record of 125 miles per hour.</p>
         <p>While American and European manufacturers dominated the modern motorcycle field for close to a century, the Japanese took a fair share of the market after the Second World War thanks to their low-cost, high-performance models. American and European firms suffered from talent drain and higher costs, and today Japanese manufacturers such as Kawasaki and Suzuki dominate the industry, despite many enthusiasts' loyalty to more traditional brands.</p>
