--- a/templates/page1.html
+++ b/templates/page1.html
@@ -3,18 +3,18 @@
 {% block content%}
 <body>
     <div>
-        <h4>Stages of development</h4><br>
+        <h4><strong>Stages of development</strong></h4><br>
 
         <p>Like many inventions, the motorcycle evolved in gradual stages, without a single inventor who can lay sole claim to being the inventor. Early versions of the motorcycle were introduced by numerous inventors, mostly in Europe, in the 19th century. </p>
         <div class="text-center">
             <img src="/static/assets/riding-cycle-world.gif" class="img-fluid" alt="biker" />
             </div>
-
-        <strong>Steam-Powered bicycles</strong>
+<br>
+        <h4>Steam-Powered bicycles</h4><br>
         <p>American Sylvester Howard Roper (1823-1896) invented a two-cylinder, steam-powered velocipede in 1867. A velocipede is an early form of a bicycle in which the pedals are attached to the front wheel. Roper's invention can be considered the first motorcycle if you allow your definition of a motorcycle to include a coal-fired steam engine. Roper, who also invented the steam-engine car, was killed in 1896 while riding his steam velocipede.  </p>
         <p>Around the same time that Roper introduced his steam-powered velocipede, Frenchman Ernest Michaux attached a steam engine to a velocipede invented by his father, blacksmith Pierre Michaux. His version was fired by alcohol and twin belt drives that powered the front wheel. </p>
-        <p>A few years later, in 1881, an inventor named Lucius Copeland of Phoenix, Arizona developed a smaller steam boiler that could drive the rear wheel of a bicycle at the amazing speed of 12 mph. In 1887, Copeland formed a manufacturing company to produce the first so-called "Moto-Cycle," though it was actually a three-wheeled contraption. </p>
-        <strong>The First Gas-Engined Motorcycle</strong>
+        <p>A few years later, in 1881, an inventor named Lucius Copeland of Phoenix, Arizona developed a smaller steam boiler that could drive the rear wheel of a bicycle at the amazing speed of 12 mph. In 1887, Copeland formed a manufacturing company to produce the first so-called "Moto-Cycle," though it was actually a three-wheeled contraption. </p><br>
+        <h4>The First Gas-Engined Motorcycle</h4><br>
 <p>Over the next 10 years, dozens of different designs for self-propelled bicycles appeared, but it's widely acknowledged that the first to use a gasoline-powered internal combustion engine was the creation of German Gottlieb Daimler and his partner Wilhelm Maybach, who developed the Petroleum Reitwagon in 1885. This marked the moment in history when the dual development of a viable gas-powered engine and the modern bicycle collided. </p>
 <br>
 <p>The Reitwagen was not much to look at and had a feature that made it quite distinct from today's motorcycles: twin outrigger “training wheels” that stabilized the bike and allowed it to turn. But the basic concept of the Reitwagen—a motorized bike with a gasoline-powered internal combustion engine—was a revolutionary design that began blazing the trail for the modern motorcycle. </p><br>
