--- a/templates/page3.html
+++ b/templates/page3.html
@@ -2,7 +2,7 @@
 
 {% block content%}
 <body>
-    <h4>How Motorcycles work</h4>
+    <h4><strong>How Motorcycles work</strong></h4><br>
 <div class="container">
 
 <p>Motorcycles are motorized vehicles for transporting one or two riders. Generally, a motorcycle has only two wheels, but any vehicle with fewer than four wheels in contact with the ground can be classified as a motorcycle. Three-wheel variations of the motorcycle include the "hack" (motorcycle plus sidecar) and the "trike" (short for motortricycle).</p><br>
@@ -35,23 +35,26 @@
     <img src="/static/assets/tenor2.gif" class="img-fluid" alt="biker" />
     </div>
 <p>Modern engines still work on pretty much the same principles as they did when a German engineer called Nicholas Otto built the first one in 1876.</p><br>
-<strong>So how does a motorcycle internal combustion engine work?</strong>
+<h4><strong>So how does a motorcycle internal combustion engine work?</strong></h4><br>
 <div class="text-center">
         <img src="/static/assets/engine thinking.png" class="img-fluid" alt="engine pic" />
     </div>
     <br>
-    <strong>The basics of the engine</strong>
-<p>It all begins with a bang inside a small, confined space. The bang is not an explosion; it's a controlled burn of a mixture of petrol and air - the petrol got into the space by being squirted from an injector, and the air came from, er, the atmosphere. The bang/burn is also called combustion, as in 'internal combustion engine'. And the small, confined space is called a combustion chamber.</p>
-<strong>The really important bits-your basic engine</strong>
+    <h4>The basics of the engine</h4
+  >
+<p>It all begins with a bang inside a small, confined space. The bang is not an explosion; it's a controlled burn of a mixture of petrol and air - the petrol got into the space by being squirted from an injector, and the air came from, er, the atmosphere. The bang/burn is also called combustion, as in 'internal combustion engine'. And the small, confined space is called a combustion chamber.</p><br> 
+
+<h>The really important bits-your basic engine</h4><br>
 <img src="/static/assets/engine_detail.png" class="img-fluid" alt="engine detail" />
     </div>
+    <br>
 <p>In the roof of the combustion chamber is a spark plug, which sparks, or ignites the fuel/air mixture and starts combustion. That bit is called ignition.
 </p>
 <p>Gasses burning in small spaces expand, rapidly. The floor of the combustion chamber is actually the top of a piston, and luckily it slides down inside the walls of a cylinder - called a 'cylinder'. Say what you like about engineers, but they are logical.
 </p>
 <p>The piston is connected to a rod, called a 'connecting rod' (see?) - shortened to con rod, or just rod. The rod is connected to a large axle-type thing, called a crank. As combustion pushes the piston and con rod down, they turn the crank.</p>
 <p>Momentum in the crank (which is comparatively heavy) now swings the con rod and piston back up the cylinder again. This is useful because in doing so, it pushes all the burnt, exhausted gas out of the cylinder, through a pair of small valves that have just opened, and out into the, er, exhaust. A clever bit here - the timing of the valves opening and closing is controlled by a chain, running from the crank back up to a spindle (or camshaft) above the valves, and bashing them open precisely when needed.</p>
-<p>Phew, so far so good. But the job is half done. We need to get more petrol and air inside the combustion chamber.</p>
+<p>Okay, so far so good. But the job is half done. We need to get more petrol and air inside the combustion chamber.</p>
 <div class="text-center">
     <h6>The complete four-stroke cycle.</h6>
     <img src="/static/assets/4stroke.gif" class="img-fluid" alt="4stroke engine" />
@@ -81,7 +84,7 @@
 <p>Of course, this is only the most basic outlining of the way your bike engine works. Each engine has its own strengths and its own design quirks; it might be supercharged, or have variable valve technology, or a semi-automatic gearbox.</p>
 <p>The beautiful thing about a four-stroke engine is when you gaze at a drawing of one, or an animation on Youtube, and suddenly understand for the first time the magical interconnection of piston, rod, crank, camshaft and valves. Its a special moment, and one that can inspire a lifetime in engineering. Its the same Eureka moment that once inspired the mighty Soichiro Honda - and, without doubt, every other engine designer, great or small.</p>
 <br>
-<strong>Motorcycle Transmission</strong>
+<h>Motorcycle Transmission</h4>
 <div class="text-center">
   <img src="/static/assets/simple_trans.png" class="img-fluid" alt="biker" /><p>A simple transmission</p>
   </div>
@@ -90,11 +93,11 @@
 
 <p>A motorcycle engine can create an enormous amount of power, which must be delivered to the wheels of the vehicle in a controllable way. The motorcycle transmission delivers power to the rear wheel through a series of structures that include the gearset, the clutch and the drive system.<p>
 <br>
-<strong>Gearset</strong>
+<h>Gearset</h4>
 <p>A gearset is a set of gears that enable a rider to move from a complete stop to a cruising speed. Transmissions on motorcycles typically have four to six gears, although small bikes may have as few as two. The gears are engaged by shifting a lever, which moves shifting forks inside the transmission.</p><br>
-<strong>Clutch</strong>
+<h>Clutch</h4>
 <p>The job of a clutch is to engage and disengage power from the engine crankshaft to the transmission. Without the clutch, the only way to stop the wheels from turning would be to turn off the engine -- an impractical solution in any kind of motorized vehicle. The clutch is a series of spring-loaded plates that, when pressed together, connect the transmission to the crankshaft. When a rider wants to shift gears, he uses the clutch to disconnect the transmission from the crankshaft. Once the new gear is selected, he uses the clutch to reestablish the connection.</p><br>
-<strong>Drive Systems</strong>
+<h>Drive Systems</h4>
 <p>There are three basic ways to transmit engine power to the rear wheel of a motorcycle: chain, belt or shaft. Chain final-drive systems are by far the most common. In this system, a sprocket mounted to the output shaft (i.e., the shaft in the transmission) is connected to a sprocket attached to the rear wheel of the motorcycle by a metal chain. When the transmission turns the smaller front sprocket, power is transmitted along the chain to the larger rear sprocket, which then turns the rear wheel. This type of system must be lubricated and adjusted, and the chain stretches and the sprockets wear, requiring periodic replacements.</p>
 <div class="text-center">
   <img src="/static/assets/drivesystem.jpg" class="img-fluid" alt="biker" /><p>Belt drive on a bike</p>
@@ -104,7 +107,7 @@
 <p>Belt drives are an alternative to chain drives. Early motorcycles often used leather belts, which could be tensioned to give traction using a spring-loaded pulley and hand lever. Leather belts often slipped, especially in wet weather, so they were abandoned for other materials and designs. By the 1980s, advances in materials made belt final-drive systems viable again. Today's belts are made of cogged rubber and operate much the same way as metal chains. Unlike metal chains, they don't require lubrication or cleaning solvents.</p>
 <p>Shaft final-drives are sometimes used. This system transmits power to the rear wheel via a drive shaft. Shaft drives are popular because they are convenient and don't require as much maintenance as chain-based systems. However, shaft drives are heavier and sometimes cause unwanted motion, called shaft jacking, in the rear of the motorcycle.</p><br>
 
-<strong>The Friction Drive</strong>
+<h4>The Friction Drive</h4><br>
 <p>The friction drive is another transmission found in some motorcycles. A friction drive is a type of continuously variable transmission, or CVT, in which the variation in gear ratios comes about as a disc connected to the engine (the driving disc) rotates across the face of a second disc connected to the rear wheel (the driven disc). By varying the radius of the contact point between the two disc surfaces, different gears can be achieved. Continuously variable transmissions have a long history of use in motorized vehicles, with variable friction transmissions appearing in motorcycles in the early 1900s.</p><br>
 
 <p>The other components that make a motorcycle a motorcycle are part of the chassis.</p><br>
