--- a/templates/page4.html
+++ b/templates/page4.html
@@ -3,7 +3,7 @@
 {% block content%}
 
 <body>
-    <h4>Culture</h4>
+    <h4><h4>Culture</h4></h4><br>
     <h4>Motorcycle Culture Revs Up</h4>
 
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -38,7 +38,7 @@
     <div class="text-center">
       <img src="/static/assets/giphy2.gif" class="img-fluid" alt="biker" />
       </div>
-    <strong>Sport Bikes and More</strong>
+    <h4>Sport Bikes and More</h4><br>
     <p>As the popularity and influence of motorcycle culture spread during the 60s and 70s, engineers and mechanics began to create new forms that were designed for performance. These new bikes were quite unlike the low-slung Harley cruisers, which had always been designed for a comfortable, long-distance ride. Instead, this new generation of bikes prioritized sensitive handling, powerful engines and, of course, extreme speed.</p>
     <p>The Honda CB750 was the model that changed it all for sport bikes. Its revolutionary inline four-cylinder engine is still widely used in sport bikes today, and it inspired an entirely new generation of motorcycles. Soon, other manufacturers, like Yamaha and Kawasaki, began producing their own sport bikes with features that were designed for racing. Some of those features were an upright rider posture, lightweight frames and larger, wider tires.</p>
     <div class="text-center">
@@ -46,14 +46,14 @@
       </div>
 <p>As sport bikes became more common, motorcycle racing also hit a new level of influence and popularity. Sports like MotoGP made superstars out of the best riders in the world and pushed mechanics, designers and riders to new heights of performance. With the influence of sport bikes growing, Japanese motorcycle companies became some of the world's largest and most influential manufacturers.</p>
 <br>
-<strong>Around the World</strong>
+<h4>Around the World</h4><br>
 <p>As the motorcycle industry established itself in countries like the US, UK and Italy, the global market also grew quickly, particularly in African and South Asian countries. In these countries, motorcycles became popular as a form of cost-effective and fuel-efficient transportation. </p>
 <div class="text-center">
   <img src="/static/assets/hop-on-motorcycle2.gif" class="img-fluid" alt="biker" />
   </div>
 <p>Some of today's largest motorcycle manufacturers are companies from India and China that mass-produce small-displacement bikes for everyday transportation. In countries such as Thailand, Vietnam and Indonesia, well over 80 percent of households own motorcycles, and they are used for everything from transporting goods to visiting family in remote areas. <br>Many of these bikes can be classified as adventure bikes or dirt bikes, with knobby tires and springy suspensions that allow them to navigate rural roads. Mopeds and scooters are also widespread in many of these countries for urban transportation.</p>
 <p>Aid organizations, like Doctors Without Borders, also often rely on networks of skilled motorcyclists to deliver critical medical aid to people in rural areas with little healthcare infrastructure. The motorcycle has been an invaluable tool for the evolution of the global economy, and it will continue to provide efficient and practical transportation for people around the world. </p><br>
-<strong>Diversity in Motorcycling</strong>
+<h4>Diversity in Motorcycling</h4><br>
 <p>Arriving in the 21st century, we find that the motorcycle scene is bigger, broader and more diverse than ever. There are nearly as many different types of motorcycles as there are types of motorcyclists. Riding still isn’t for everybody, but if it’s for you, there are more ways to do it than ever. </p>
 <p>For one thing, the motorcycle hobby and sport has become increasingly diverse. Today, around 20 percent of motorcycle owners are women, a number that would have been unthinkable fifty years ago. Major manufacturers like Harley-Davidson have made big investments in increasing their appeal to female riders, including offering riding classes designed to be friendly to women.</p>
 <div class="text-center">
@@ -61,7 +61,7 @@
   </div>
 <p>Motorcycling also has greater age diversity than ever before. What was once considered a young person’s sport now has numerous riders in their 60s and up. This is due to the Baby Boomer generation that grew up with bikes and continue to ride well into their golden years. Younger riders are driving a boom in smaller, retro-styled bikes like the Ducati Scrambler and Triumph Street Twin. </p>
 <p>On that note, there are more different styles of motorcycles available today than ever before. In addition to well-established categories such as sport bikes, cruisers and cafe racers, we now have naked bikes (stripped-down bikes that are great for beginners and pros alike) and adventure bikes (which combine the roadworthiness of a motorcycle and the trail-ready toughness of a dirt bike). These days, just about any kind of rider can find a style of bike that suits them.</p><br>
-<strong>Technology and the Future of Motorcycles</strong>
+<h4>Technology and the Future of Motorcycles</h4><br>
 <p>Technology has also created a new degree of positive social connection within motorcycle culture. Riders today can use hands-free mesh technology for communication, to stay in contact with friends and family while keeping their focus on the road. Meanwhile, innovations such as motorcycle helmet speakers allow riders to experience their favorite music in high-definition sound while riding.</p>
 <p>The Internet has also created an entirely new set of platforms for connection between riders. Motovlogging allows motorcyclists to flock to YouTube to show off their favorite bikes and share their experiences with riding. Motorcycle forums continue to thrive on bulletin boards and on community discussion platforms such as Reddit. Social platforms help people form riding groups and connect with more experienced riders who can show them new skills. Even motorcycle magazines are now widely available in digital formats. </p>
 <p>Finally, and perhaps most importantly, technology is also helping to make motorcycles safer. New improvements are developed constantly, including adaptive headlights that provide dynamic illumination all the way through a corner and computerized throttles that help prevent stalls. Helmet communication systems, have a role to play here too, as they can help riders stay in touch during group rides and communicate about obstacles in the road. </p>
