--- a/templates/page5.html
+++ b/templates/page5.html
@@ -2,7 +2,7 @@
 
 {% block content%}
 <body>    
-    <h4>Motorcycle History Timeline</h4>
+    <h4><strong>Motorcycle History Timeline</strong></h4>
 
     <div class="container">
     
@@ -15,9 +15,10 @@
     
     <img src="/static/assets/giphy.gif" class="img-fluid" alt="bike on road" />
     </div>
-
+    
 <p>1885: German partners Gottlieb Daimler and Wilhelm Mayback created the first gas-powered combustion engine. This was a staple in motorcycle history, as it was the first time anyone was able to combine a traditional bike with a gas-powered engine. They received help from an engineer by the name of Nicolaus Otto, who, in 1876, created the first-ever four-stroke internal combustion engine. Triumph Engineering was later founded in England, which would go on to become 'Triumph Motorcycles'.</p>
-<p>*Fun Fact*: Gottlieb Daimler would later try his hand in the car manufacturing industry, and the company he created would go by the name of 'Daimler Benz', which is currently Mercedes-Benz.</p>
+<div class="text-primary">
+<p><strong>*Fun Fact*: Gottlieb Daimler would later try his hand in the car manufacturing industry, and the company he created would go by the name of 'Daimler Benz', which is currently Mercedes-Benz.</strong></p></div>
 <p>1894: A German company called Hildebrand & Wolfmuller became the first to create a factory production line to create these vehicles. And to make the name of their product more clear, they dubbed the vehicles "motor-cycles".</p>
 <p>1895: Dedion-Buton, a Frenchman, introduced an innovative four-stroke engine that would catapult the production of the motorcycles. </p>
 <p>1899: Charles H. Metz was responsible for the first production of motorcycles in America.</p>
