--- a/static/main.css
+++ b/static/main.css
@@ -1,12 +1,28 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-size: 22px;
     /* background-color:#9575CD; */
+}
+
+h1, h2, h3, h4 {
+    color: red;
+}
+
+h1 {
+    text-shadow: 2px 2px red;
+}
+
+img {
+    border: 5px solid #555;
 }
 
 .dark-mode {
     background-color: black;
     color: white;
+}
+
+.container:hover {
+    color: rgb(35, 185, 170);
 }
 
 #lightSwitch {
@@ -84,3 +100,7 @@ background-color: hsla(var(--cd-color-3-h),var(--cd-color-3-s),var(--cd-color-3-
 .height{
 height:3000px;
 } 
+
+.carousel-inner > .item {
+    height: 200px;
+}
