--- a/templates/base.html
+++ b/templates/base.html
@@ -5,61 +5,71 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+            <title>Motorcycle History</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+
+
         <link rel="stylesheet" href="{{url_for('static', filename = 'main.css')}}">
+
         <script type="text/javascript" src="{{url_for('static', filename ='app.js')}}"></script>
-
+        
         <link rel="stylesheet" href="custom.css">
-
-                <title>Motorcycle History</title>
 
 </head>
 
-<body onload="darkCheck()"></body>
 
-    <h1>Motorcycles - a history</h1>
+
+    <body onload="darkCheck()">
+
+    <h1 class="font-weight-bold"><strong>Motorcycles - a history</strong></h1>
 
     <div class="container-fluid px-0">
         <!-- Content here -->
         <nav class="navbar navbar-expand-sm navbar-light bg-success border-bottom">
         <!-- Navbar content -->
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/static/assets/cruise-bike-icon.png" alt="" width="60" height="40"></a>
-            <button
-            class="navbar-toggler"
-            type="button"
+        
+        <a class="navbar-brand" href="#" data-bs-toggle="tooltip" title="Welcome!, enjoy your visit.">
+                <img src="/static/assets/cruise-bike-icon.png" alt="" width="60" height="50"></a>
+            
+
+            <button class="navbar-toggler" 
+            type="button" 
             data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-            >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
                     <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('my_view.index')}}">Home</a>
+                    <a button class="nav-link active btn btn-outline" aria-current="page" href="{{ url_for('my_view.index')}}"><strong>Home</strong></a></button>  
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('my_view.page1')}}">Development</a>
+                    <a button class="nav-link btn btn-outline-info" href="{{ url_for('my_view.page1')}}"><strong>Development</strong></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('my_view.page2')}}">Design</a>
+                    <a button class="nav-link btn btn-outline-info" href="{{ url_for('my_view.page2')}}"><strong>Design</strong></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('my_view.page3')}}">How they work</a>
+                    <a button class="nav-link btn btn-outline-info" href="{{ url_for('my_view.page3')}}"><strong>How they work</strong></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('my_view.page4')}}">Culture</a>
+                    <a button class="nav-link btn btn-outline-info" href="{{ url_for('my_view.page4')}}"><strong>Culture</strong></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('my_view.page5')}}">Timeline</a>
+                    <a button class="nav-link btn btn-outline-info" href="{{ url_for('my_view.page5')}}"><strong>Timeline</strong></a>
                     </li>
-                    </ul>
 
+                </ul>
+                    
                 </div>
         
         </div>
@@ -88,17 +98,14 @@
 
 <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+
+{% block content%}
 
 
 
+{% endblock %}        
 
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
-
-        {% block content%}
-
-        {% endblock %}        
-
-    </body>
+</body>
 </html>
